--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,9 @@
 name: 'Snapcraft Publish'
 description: 'Publish a Snapcraft project to the Snap Store'
 author: 'James Henstridge'
+branding:
+  icon: 'upload'
+  color: 'orange'
 inputs:
   store_login:
     description: 'The login data for the Snap Store produced with "snapcraft export-login"'
