--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,8 @@ jobs:
         npm install
         npm run all
   integration: # make sure the action works on a clean machine without building
+    # Only run integration test if we have access to secrets
+    if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
