--- a/package.json
+++ b/package.json
@@ -25,21 +25,21 @@
   "author": "James Henstridge",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.4.0",
-    "@actions/exec": "^1.1.0"
+    "@actions/core": "^1.6.0",
+    "@actions/exec": "^1.1.1"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.24",
-    "@types/node": "^16.3.1",
-    "@typescript-eslint/parser": "^4.28.2",
-    "@zeit/ncc": "^0.22.3",
-    "eslint": "^7.30.0",
-    "eslint-plugin-github": "^4.1.3",
-    "eslint-plugin-jest": "^24.3.6",
-    "jest": "^27.0.6",
-    "jest-circus": "^27.0.6",
-    "prettier": "^2.3.2",
-    "ts-jest": "^27.0.3",
-    "typescript": "^4.3.5"
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.21",
+    "@typescript-eslint/parser": "^5.15.0",
+    "@vercel/ncc": "^0.33.3",
+    "eslint": "^8.11.0",
+    "eslint-plugin-github": "^4.3.5",
+    "eslint-plugin-jest": "^26.1.1",
+    "jest": "^27.5.1",
+    "jest-circus": "^27.5.1",
+    "prettier": "^2.6.0",
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.6.2"
   }
 }
